--- a/templates/diagram.tex
+++ b/templates/diagram.tex
@@ -3,19 +3,20 @@
 
 \usepackage{tikz}
 \usetikzlibrary{positioning}
+\usetikzlibrary{cd}
 
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{mathpazo}
 \usepackage[T1]{fontenc}
 
-\definecolor{diagrambg}{HTML}{F9F9F9}
+\definecolor{diagrambg}{HTML}{FFFFFF}
 \definecolor{diagramfg}{HTML}{222222}
 
 % \definecolor{diagramshaded}{HTML}{CCFFCC}
 % \definecolor{diagramshadedtext}{HTML}{000000}
 
-\pagecolor{diagrambg}
+% \pagecolor{diagrambg}
 \color{diagramfg}
 
 \tikzset{every node/.style={font=\Large}}
